[gd_scene load_steps=13 format=2]

[ext_resource path="res://scenes/city/city_b/apartment/background.png" type="Texture" id=1]
[ext_resource path="res://scenes/city/city_b/apartment/kitchen.png" type="Texture" id=2]
[ext_resource path="res://entities/fixable/fridge/fridge.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/city/city_b/apartment/floor.png" type="Texture" id=4]
[ext_resource path="res://scenes/city/city_b/apartment/apartment.gd" type="Script" id=5]
[ext_resource path="res://entities/animator/animator.gd" type="Script" id=6]
[ext_resource path="res://scenes/city/city_b/apartment/lamp_light.png" type="Texture" id=7]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 6.5, 41 )

[sub_resource type="SegmentShape2D" id=2]
b = Vector2( 176, 0 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 101, 10 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 14, 37 )

[sub_resource type="Animation" id=4]
resource_name = "tony_wakeup"
step = 0.05
tracks/0/type = "method"
tracks/0/path = NodePath("CutsceneAnimator")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [ "drunk_tony_0" ],
"method": "play_dialogue_sequence"
}, {
"args": [ true ],
"method": "set_player_movement"
} ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.05 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "cam_follow_player"
} ]
}

[node name="Apartment" type="Node2D"]
script = ExtResource( 5 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 0, -1 )
z_index = -20
texture = ExtResource( 1 )

[node name="Kitchen" type="Sprite" parent="."]
position = Vector2( -13, -5 )
z_index = -5
texture = ExtResource( 2 )

[node name="LampLight" type="Light2D" parent="Kitchen"]
visible = false
position = Vector2( 50.5, 31 )
rotation = 1.5708
texture = ExtResource( 7 )
energy = 0.5
range_z_max = 0

[node name="Floor" type="Sprite" parent="."]
position = Vector2( 0, 36 )
z_index = 1
texture = ExtResource( 4 )

[node name="Fridge" parent="." instance=ExtResource( 3 )]
position = Vector2( -14, 18 )
z_index = -8

[node name="Walls" type="StaticBody2D" parent="."]

[node name="Collision_1" type="CollisionShape2D" parent="Walls"]
position = Vector2( -94.5, -1 )
shape = SubResource( 1 )

[node name="Collision_2" type="CollisionShape2D" parent="Walls"]
position = Vector2( 94.5, -1 )
shape = SubResource( 1 )

[node name="Floor" type="CollisionShape2D" parent="Walls"]
position = Vector2( -88, 32 )
shape = SubResource( 2 )

[node name="Ceiling" type="CollisionShape2D" parent="Walls"]
position = Vector2( 0, -52 )
shape = SubResource( 5 )

[node name="TonySeeArea" type="Area2D" parent="."]

[node name="Collision" type="CollisionShape2D" parent="TonySeeArea"]
position = Vector2( -9, -5 )
shape = SubResource( 3 )

[node name="StopPos" type="Position2D" parent="TonySeeArea"]
position = Vector2( -1, 32 )

[node name="CutsceneAnimator" type="AnimationPlayer" parent="."]
anims/tony_wakeup = SubResource( 4 )
script = ExtResource( 6 )

[connection signal="body_entered" from="TonySeeArea" to="." method="_on_TonySeeArea_body_entered"]
